# pcr-money

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  github-actions.yml
src/enum_method/: __init__.py  method.py
src/pcr_money/: money.py
tests/: test_money.py
